<ScrollView  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_fragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:animateLayoutChanges="true"
        tools:context="com.copa.echo.SaidItFragment">

        <!-- Status banner: colour, dot and text all say whether audio is being captured. -->
        <LinearLayout
            android:id="@+id/status_banner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@color/dark_green"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:paddingTop="14dp"
            android:paddingBottom="14dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical">

                <View
                    android:id="@+id/status_dot"
                    android:layout_width="16dp"
                    android:layout_height="16dp"
                    android:layout_marginRight="12dp"
                    android:background="@drawable/status_dot" />

                <TextView
                    android:id="@+id/status_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/gray_f"
                    android:textSize="@dimen/emph_text_size"
                    android:text="@string/status_listening" />
            </LinearLayout>

            <TextView
                android:id="@+id/status_hint"
                android:layout_marginTop="4dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/gray_e"
                android:textSize="@dimen/small_text_size"
                android:text="@string/status_hint_stop" />
        </LinearLayout>

        <!-- How much audio is currently held in memory. -->
        <TextView
            android:layout_marginTop="24dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/memory_label" />

        <TextView
            android:id="@+id/memory_size"
            android:layout_marginTop="2dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/EmphasizedText"
            android:text="@string/sample_time" />

        <ProgressBar
            android:id="@+id/memory_bar"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:max="1000"
            android:progressTint="@color/green"
            android:progressBackgroundTint="@color/gray_6" />

        <TextView
            android:id="@+id/memory_limit"
            android:layout_marginTop="6dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/SmallText"
            android:gravity="center"
            android:text="@string/sample_time" />

        <!-- The single save action: everything that is in memory right now. -->
        <Button
            android:id="@+id/save_everything"
            style="@style/Button"
            android:background="@drawable/green_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="26dp"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:paddingTop="18dp"
            android:paddingBottom="18dp"
            android:text="@string/save_everything" />

        <TextView
            android:id="@+id/save_everything_hint"
            android:layout_marginTop="8dp"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/SmallText"
            android:gravity="center"
            android:text="@string/save_everything_hint" />

        <View
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:layout_marginTop="22dp"
            android:layout_marginBottom="18dp"
            android:layout_width="match_parent"
            android:layerType="software"
            android:layout_height="7dp"
            android:background="@drawable/dashed_line" />

        <!-- Automatic save status. -->
        <TextView
            android:id="@+id/auto_save_status"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/auto_save_disabled_status" />

        <TextView
            android:id="@+id/auto_save_next"
            android:layout_marginTop="4dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/SmallText"
            android:gravity="center"
            android:text="" />

        <TextView
            android:id="@+id/last_save"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/SmallText"
            android:gravity="center"
            android:text="" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="30dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/recordings_button"
                style="@style/Button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginRight="10dp"
                android:textSize="@dimen/info_text_size"
                android:text="@string/recordings_title" />

            <Button
                android:id="@+id/settings_button"
                style="@style/Button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="@dimen/info_text_size"
                android:text="@string/settings_title" />
        </LinearLayout>

    </LinearLayout>
</ScrollView>
